// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the TagCard component Should match snapshot - user is NOT an admin, displayEditButtons not passed. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="border-3 border-transparent text-button-gray"
    data-testid="tag-card"
  >
    <div
      class="border border-dial-gray card-drop-shadow"
    >
      <div
        class="flex gap-3 my-5 px-4"
      >
        <div
          class="card-title text-button-gray"
        >
          <span>
            Example Tag
          </span>
        </div>
        <div
          class="line-clamp-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the TagCard component Should match snapshot - user is NOT an admin, displayEditButtons passed. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="border-3 border-transparent text-button-gray"
    data-testid="tag-card"
  >
    <div
      class="border border-dial-gray card-drop-shadow"
    >
      <div
        class="flex gap-3 my-5 px-4"
      >
        <div
          class="card-title text-button-gray w-2/6"
        >
          <span>
            Example Tag
          </span>
        </div>
        <div
          class="line-clamp-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the TagCard component Should match snapshot - user is an admin, displayEditButtons not passed. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="border-3 border-transparent text-button-gray"
    data-testid="tag-card"
  >
    <div
      class="border border-dial-gray card-drop-shadow"
    >
      <div
        class="flex gap-3 my-5 px-4"
      >
        <div
          class="card-title text-button-gray"
        >
          <span>
            Example Tag
          </span>
        </div>
        <div
          class="line-clamp-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the TagCard component Should match snapshot - user is an admin, displayEditButtons passed. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="border-3 border-transparent text-button-gray"
    data-testid="tag-card"
  >
    <div
      class="border border-dial-gray card-drop-shadow"
    >
      <div
        class="flex gap-3 my-5 px-4"
      >
        <div
          class="card-title text-button-gray w-2/6"
        >
          <span>
            Example Tag
          </span>
        </div>
        <div
          class="line-clamp-1"
        />
        <div
          class="flex flex-row gap-3 ml-auto"
        >
          <button
            class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
            data-testid="edit-button"
            type="button"
          >
            <svg
              class="inline pb-0.5"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 20h9"
              />
              <path
                d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
              />
            </svg>
            <span
              class="text-sm px-1"
            >
              Edit
            </span>
          </button>
          <button
            class="delete-button gap-x-1.5"
            data-testid="delete-button"
            type="button"
          >
            <svg
              class="text-sm"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"
              />
            </svg>
            <span
              class="text-sm"
            >
              Delete
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
